Project

General

Profile

Actions

Bug #49778

closed

mon: promote_standby does not update available_modules

Added by Sage Weil about 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

originally observed during upgrade from <15.2.5 via cephadm: the cephadm migration runs immediately after upgrade and the 'config set' fails:

2021-03-12T19:38:59.906 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]: debug 2021-03-12T19:38:59.694+0000 7f7e439e9700 -1 mgr load Traceback (most recent call last):
2021-03-12T19:38:59.907 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:   File "/usr/share/ceph/mgr/cephadm/module.py", line 413, in __init__
2021-03-12T19:38:59.907 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:     self.migration = Migrations(self)
2021-03-12T19:38:59.907 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:   File "/usr/share/ceph/mgr/cephadm/migrations.py", line 32, in __init__
2021-03-12T19:38:59.908 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:     self.set(0)
2021-03-12T19:38:59.908 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:   File "/usr/share/ceph/mgr/cephadm/migrations.py", line 40, in set
2021-03-12T19:38:59.908 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:     self.mgr.set_module_option('migration_current', val)
2021-03-12T19:38:59.908 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:   File "/usr/share/ceph/mgr/mgr_module.py", line 1460, in set_module_option
2021-03-12T19:38:59.908 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:     return self._set_module_option(key, val)
2021-03-12T19:38:59.909 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:   File "/usr/share/ceph/mgr/mgr_module.py", line 1449, in _set_module_option
2021-03-12T19:38:59.909 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]:     None if val is None else str(val))
2021-03-12T19:38:59.909 INFO:journalctl@ceph.mgr.x.smithi086.stdout:Mar 12 19:38:59 smithi086 bash[27194]: ValueError: unrecognized config option 'mgr/cephadm/migration_current'

the reason is that although the new mgr was promoted from standby to active, the mgrmap did not include the mgr/cephadm/migration_current option--it wouldn't get updated until the next beacon.


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #49816: octopus: mon: promote_standby does not update available_modulesResolvedNathan CutlerActions
Copied to RADOS - Backport #49817: pacific: mon: promote_standby does not update available_modulesResolvedActions
Actions #1

Updated by Sage Weil about 3 years ago

  • Pull request ID set to 40078

I think we probably also need a workaround so that we can upgrade from old ceph versions that have this bug...

Actions #2

Updated by Sage Weil about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49816: octopus: mon: promote_standby does not update available_modules added
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49817: pacific: mon: promote_standby does not update available_modules added
Actions #5

Updated by Loïc Dachary about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF