mon/MgrMonitor: populate available_modules from promote_standby()

This was done in the beacon path, where there is no active mgr and we
get a new entrant, but not for this case where an existing standby is
promoted to active.

This fixes a problem during upgrade where a new (standby) mgr's modules
have a new module option but it is not reflected immediately (not until
the next beacon).

Fixes: https://tracker.ceph.com/issues/49778
Signed-off-by: Sage Weil <sage@newdream.net>
(cherry picked from commit cd0094678d0e01fd7b74e2f6f5ff47a16a60dddd)